Fix horizontal scroll caused by width of back button

--- a/_sass/_customize.scss
+++ b/_sass/_customize.scss
@@ -350,7 +350,7 @@ small {
 }
 
 .btn-back {
-  width: $text-width;
+  max-width: $text-width;
   margin: auto;
 }
 
